Refactor recipes to be less verbose
In order to keep the recipes concise, this commit refactors the
database, nginx, and default recipes to use less code and still
accomplish the same configuration. This is done by adding a couple
classes to the Rubycas::Helper module that are concerned with data bag
searches for configuration needs. In addition, this commit renames one
of the data bag keys for database configuration from type to database
type. This is because there was a colision with the type method being
used and the value wouldn't be read by the helper classes properly. It
adds a redirect to the nginx template if ssl is enabled so that any non
ssl traffic will get redirected to the ssl connection. And finally it
removes some of the logic in the rubycas god config as it would prevent
the app from starting up after failing to start/restart after 10
minutes.

[#21964]

--- a/templates/default/rubycas.god.erb
+++ b/templates/default/rubycas.god.erb
@@ -3,13 +3,12 @@ SINATRA_ROOT = "<%= @app_root %>"
 God.watch do |w|
   pid_file = File.join(SINATRA_ROOT, "tmp/pids/unicorn.pid")
 
-
-  w.name     = "<%= "#{@app_env}-unicorn" %>"
+  w.name = "<%= "#{@app_env}-unicorn" %>"
   w.dir = SINATRA_ROOT
   w.uid = "<%= @user %>"
-  w.start    = "bundle exec unicorn -c config/unicorn.rb"
+  w.start = "bundle exec unicorn -c config/unicorn.rb"
   w.restart = "kill -s HUP $(cat #{pid_file})"
-  w.interval = 60.seconds
+  w.interval = 5.seconds
   w.stop = "kill -s QUIT $(cat #{pid_file})"
   w.start_grace = 20.seconds
   w.restart_grace = 20.seconds
@@ -30,21 +29,7 @@ God.watch do |w|
   # When to restart a running deamon?
   w.restart_if do |restart|
     restart.condition(:file_touched) do |c|
-      c.path = '<%= @watch_file %>'
-    end
-  end
-
-  w.lifecycle do |on|
-    # Handle edge cases where deamon
-    # can't start for some reason
-    on.condition(:flapping) do |c|
-      c.to_state = [:start, :restart] # If God tries to start or restart
-      c.times = 5                     # five times
-      c.within = 5.minute             # within five minutes
-      c.transition = :unmonitored     # we want to stop monitoring
-      c.retry_in = 10.minutes         # for 10 minutes and monitor again
-      c.retry_times = 5               # we'll loop over this five times
-      c.retry_within = 2.hours        # and give up if flapping occured five times in two hours
+    c.path = "#{SINATRA_ROOT}/<%= @watch_file %>"
     end
   end
 end
