--- a/templates/default/config.yml.erb
+++ b/templates/default/config.yml.erb
@@ -32,7 +32,7 @@
 # or Passenger.
 
 server: <%= @application_server %>
-port: <%= @port %>
+port: <%= @database_port %>
 ssl_cert: <%= @ssl_cert_path %>
 ssl_key: <%= @ssl_cert_key_path %>
 
@@ -99,11 +99,11 @@ uri_path: <%= @uri_path %>
 #   i.e. `mysqladmin -u root create casserver`)
 
 database:
-  adapter: <%= @adapter %>
+  adapter: <%= @database_adapter %>
   database: <%= @database_name %>
   username: <%= @database_user %>
   password: <%= @database_password %>
-  host: <%= @host %>
+  host: <%= @database_host %>
   reconnect: <%= @reconnect %>
 
 # IMPORTANT! By default, the server can handle up to ~5 concurrent requests
