--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -20,6 +20,13 @@ server {
   access_log  /var/log/nginx/<%= @app_name %>_access.log;
   error_log   /var/log/nginx/<%= @app_name %>_error.log;
 
+  <% if @https_boolean %>
+  # redirect all non ssl traffic to ssl
+  if ($scheme = http) {
+    return 301 https://$server_name$request_uri;
+  }
+  <% end %>
+
   location / {
     # serve static files from defined root folder;.
     # @gitlab is a named location for the upstream fallback, see below
