--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -10,7 +10,13 @@ server {
   server_name <%= @server_name %>;
   root        <%= @app_home %>/public;
   client_max_body_size 4G;
-  <% if @https_boolean %>
+
+  <% if @force_ssl %>
+  # redirect all non ssl traffic to ssl
+  if ($scheme = http) {
+    return 301 https://$server_name$request_uri;
+  }
+
   ssl on;
   ssl_certificate <%= @ssl_cert %>;
   ssl_certificate_key <%= @ssl_cert_key %>;
@@ -20,12 +26,6 @@ server {
   access_log  /var/log/nginx/<%= @app_name %>_access.log;
   error_log   /var/log/nginx/<%= @app_name %>_error.log;
 
-  <% if @https_boolean %>
-  # redirect all non ssl traffic to ssl
-  if ($scheme = http) {
-    return 301 https://$server_name$request_uri;
-  }
-  <% end %>
 
   location / {
     # serve static files from defined root folder;.
