--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -5,6 +5,15 @@ upstream <%= @app_name %> {
   server 127.0.0.1:18889;
 }
 
+<% if @force_ssl %>
+server {
+  listen 80;
+  server_name <%= @server_name %>;
+
+  # redirect all requests to ssl
+  rewrite  ^/(.*)$  https://$host/$1 permanent;
+}
+
 server {
   listen      <%= @port %> <%= "default" if @default_server %>;
   server_name <%= @server_name %>;
@@ -12,11 +21,6 @@ server {
   client_max_body_size 4G;
 
   <% if @force_ssl %>
-  # redirect all non ssl traffic to ssl
-  if ($scheme = http) {
-    return 301 https://$server_name$request_uri;
-  }
-
   ssl on;
   ssl_certificate <%= @ssl_cert %>;
   ssl_certificate_key <%= @ssl_cert_key %>;
