Add closing end for redirect server block
In order for the redirect server block to be defined properly, this
commit adds a closing end.

[#22845]

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -13,6 +13,7 @@ server {
   # redirect all requests to ssl
   rewrite  ^/(.*)$  https://$host/$1 permanent;
 }
+<% end %>
 
 server {
   listen      <%= @port %> <%= "default" if @default_server %>;
