--- a/templates/default/config.yml.erb
+++ b/templates/default/config.yml.erb
@@ -423,14 +423,14 @@ database:
 # like logo.png and bg.png.
 #
 # By default, we use the 'simple' theme which you can find in themes/simple.
-theme: simple
+theme: <%= @webui_theme %>
 
 # The name of your company/organization. This will show up on the login page.
-organization: CAS
+organization: <%= @webui_organization %>
 
 # A short bit of text that shows up on the login page. You can make this blank
 # if you prefer to have no extra text shown at the bottom of the login box.
-infoline: Powered by <a href="http://rubycas.github.com">RubyCAS-Server</a>
+infoline: <%= @webui_infoline %>
 
 # Custom views directory. If set, this will be used instead of 'lib/casserver/views'.
 #custom_views: /path/to/custom/views
