Add default to port 80 server block
In order to ensure that all non ssl traffic is redirected to ssl when
force ssl is true and rubycas is set as the default server, this commit
adds to the nginx configuration template to add default.

[#23169](https://squaremouth.lighthouseapp.com/projects/63460-viper/tickets/23169)

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -7,7 +7,7 @@ upstream <%= @app_name %> {
 
 <% if @force_ssl %>
 server {
-  listen 80;
+  listen 80 <%= "default" if @default_server %>;
   server_name <%= @server_name %>;
 
   # redirect all requests to ssl
