Add custom_views option to rubycas config.yml
To allow the custom views option in the rubycas-server config.yml to be
set, this commit adds the appropriate setup into the erb template,
server recipe, as well as an attribute default which is the same as the
default for rubycas-server.

--- a/templates/default/config.yml.erb
+++ b/templates/default/config.yml.erb
@@ -433,7 +433,7 @@ organization: <%= @webui_organization %>
 infoline: <%= @webui_infoline %>
 
 # Custom views directory. If set, this will be used instead of 'lib/casserver/views'.
-#custom_views: /path/to/custom/views
+custom_views: <%= @custom_views %>
 
 # Custom public directory. If set, static content (css, etc.) will be served from here rather
 # than from rubycas-server's internal 'public' directory (but be mindful of any overriding
