--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -31,6 +31,10 @@ server {
   access_log  /var/log/nginx/<%= @app_name %>_access.log;
   error_log   /var/log/nginx/<%= @app_name %>_error.log;
 
+  <% if @is_load_balanced %>
+  set_real_ip_from <%= @load_balancer_ip %>;
+  real_ip_header X-Forwarded-For;
+  <% end %>
 
   location / {
     # serve static files from defined root folder;.
